<resources>
    <string name="app_name">MovieApp</string>
    <string name="movie_title">"The Queen's Gambit"</string>
    <string name="genres">"Drama, Sport"</string>
    <string name="creator_lbl">Creators:</string>
    <string name="actors_lbl">Actors:</string>
    <string name="creators_content">"Scott Frank, Alan Scott"</string>
    <string name="actors_content">"Anya Taylor-Joy, Chloe Pirrie"</string>
    <string name="description_title">Story</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Welcome to MovieApp!</string>
    <string name="about">About</string>
    <string name="retry">Retry</string>
    <string name="quiz">Quiz</string>
    <string name="next">Next</string>
    <string name="your_score">Your Score</string>
    <string name="default_score">0/0</string>
    <string name="question_progress">Question %d/%d</string>
</resources>